docs/_sass/custom/custom.scss
/* ... */
.site-logo {
	width: 135px;
	height: 30px;
}

// Sidebar
.side-bar {
	padding: 80px 0;
	border: 0;
	display: block;
	z-index: 1;

	nav.site-nav,
	nav.aux-nav {
		padding: 0;
		width: 100%;
		background-color: $white-two;
		display: initial;
		.nav-list,
		.aux-nav-list {
			width: 100%;
			padding: 0;
			margin-top: 30px;
			.nav-list-item,
			.aux-nav-list-item {
				padding: 0;
				&:hover {
					background-color: #ededed;
				}
				&.active {
					&:hover {
						background-color: transparent;
					}
					.nav_list {
						li {
							padding-right: 0;
							padding-left: 0;
							&:hover {
								background-color: #ededed;
							}
						}
					}
				}

				&.header {
					padding: 12px 40px 12px calc(100% - 290px);
					color: $teal-green;
					font-family: GalanoGrotesque-Bold;
					font-size: 18px !important;
					&:hover {
						background-color: transparent;
						background-image: none;
					}
					&:not(:first-of-type) {
						padding-top: 36px;
						border-top: 1px solid $border-grey;
						margin-top: 20px;
					}
				}

				a.nav-list-link {
					padding: 12px 40px 12px calc(100% - 290px);
					font-size: 16px !important;
					color: $black;
					&.active,
					&:hover {
						background-color: #ededed;
						background-image: none;
						font-family: GalanoGrotesque-Medium;
					}
				}
				.nav-list-expander {
					right: 40px;
					width: 22px;
					height: 22px;
					padding: 0;
					margin: 14px 0 0 0;
					svg {
						color: $black;
					}
					&:hover {
						background-color: none;
						background-image: none;
					}
				}

				.nav-list,
				.aux-nav-list {
					margin-top: 0;
					a.nav-list-link,
					a.aux-nav-list-item {
						margin-left: 20px;
						font-size: 14px !important;
						letter-spacing: 0.05px;
					}
				}
			}
		}

		.search {
			margin-top: 35px;
			margin-left: calc(100% - 290px);
			margin-right: 40px;
			max-width: 250px !important;
			max-height: 40px !important;
			width: 250px !important;
			z-index: 1;

			.search-input {
				background-color: $white-two;
				border: 1px solid $border-grey;
				border-radius: 4px;
				color: $battleship-grey;
				&:focus,
				&:active {
					background-color: $white;
					color: black;
				}
				.search-icon {
					color: $battleship-grey;
				}
			}

			.search-input:focus + .search-label .search-icon {
				color: $teal-green;
			}
		}
		.mobile-menu {
			display: none;
		}
	}
}

//Search Fixes
.search-active .main {
	position: inherit;
	right: inherit;
	left: inherit;
}
.search-overlay {
	display: none;
}
.search-result-doc .search-result-icon {
	color: $teal-green;
}
// Footer
footer {
	height: 360px;
	.footer-main {
		padding: 80px;
		ul {
			list-style: none;
			padding: 0;
			margin: 0;
			li {
				display: inline-block;
				padding: 0;
				margin: 0;
			}
		}
		.row {
			display: flex;
			.left,
			.right {
				width: 50%;
			}
			.right {
				display: flex;
				justify-content: flex-end;
			}
			.site-title {
				padding: 0;
				margin-bottom: 30px;
				.site-logo {
					height: 45px;
				}
			}
			.footer-links {
				li {
					margin-right: 40px;
					a {
						padding: 0;
						color: $black;
						font-size: 18px;
						&:hover {
							color: $teal-green;
						}
					}
				}
			}
			.footer-social,
			.bottom-footer-links {
				li {
					a {
						padding: 0 15px;
						font-size: 16px;
						color: $warm-grey-two;
						&:last-of-type {
							padding-right: 0;
						}
						&:hover {
							color: $teal-green;
						}
					}
				}
			}
		}
		.top-border {
			padding-top: 30px;
			margin-top: 30px;
			border-top: 1px solid $border-grey;
		}
		a:hover {
			background-color: transparent !important;
			background-image: none !important;
		}
	}
	.footer-sidebar {
		z-index: -1;
	}
}
/* ... */

